crates/toml_edit/tests/snapshots/invalid/control/bare-cr.stderr
TOML parse error at line 2, column 2
  |
2 | 
  |  ^
carriage return must be followed by newline, expected newline
